--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@
 #Detects system type for using OpenGL drivers
 #
 MACHINE= $(shell uname -s)
-ifeq ($(MACHINE),Darwin)
+ifeq ($(MACHINE),Darwin) #Mac
 	OPENGL_INC= -FOpenGL
 	OPENGL_LIB= -framework OpenGL
 	SDL_INC= `sdl-config --cflags`
@@ -42,6 +42,9 @@ INCLUDE= $(SDL_INC) $(OPENGL_INC)
 MODULES := $^
 SOURCES := $(MODULES).cpp 
 OBJECTS = $(patsubst %.cpp, %.o, %(SOURCES))
+
+#list object files here for now
+OBJECTS += staticmethods.o gameobject.o gamebox.o 
 
 #/usr/bin/ruby1.9.1
 
